--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -62,6 +62,7 @@ task fatJar(type: Jar) {
     }
     from {
         configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     with jar
