--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -25,6 +25,7 @@ task fatJar(type: Jar) {
 		attributes 'Implementation-Version': '1.xx'
     }
     from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
