--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -18,34 +18,6 @@ distributions {
     }
 }
 
-protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:$protobufVersion"
-    }
-    plugins {
-        grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion"
-        }
-    }
-    generatedFilesBaseDir = "$projectDir/build/generated/"
-    generateProtoTasks {
-        all()*.plugins {
-            grpc {}
-        }
-    }
-}
-
-sourceSets {
-    main {
-        java {
-            srcDirs += "$projectDir/build/generated/main/grpc"
-            srcDirs += "$projectDir/build/generated/main/java"
-        }
-        proto {
-            srcDirs += "cineast-proto/src/main/protobuf"
-        }
-    }
-}
 
 configurations.all {
     // Check for updates every build
@@ -55,25 +27,33 @@ configurations.all {
 
 task fatJar(type: Jar) {
     archiveClassifier = 'full'
-    manifest {
-        attributes 'Main-Class': 'org.vitrivr.cineast.api.Main'
-        attributes 'Multi-Release': 'true'
-		attributes 'Implementation-Version': '1.xx'
-    }
     from {
-        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     with jar
 }
 
+jar{
+    manifest {
+        attributes 'Main-Class': 'org.vitrivr.cineast.api.Main'
+        attributes 'Multi-Release': 'true'
+        attributes 'Implementation-Version': '1.xx'
+    }
+}
+
+shadowJar {
+    mergeServiceFiles()
+}
+
 dependencies {
-    implementation('io.javalin:javalin-bundle:3.+'){
+    compile('io.javalin:javalin-bundle:3.+'){
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.+'
-    implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.+'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.+'
+    compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.+'
+    compile 'org.vitrivr:cineast-proto:0.1.0'
 }
 
 
