making runtime jar executable

--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -19,15 +19,22 @@ distributions {
 
 task fatJar(type: Jar) {
     archiveClassifier = 'full'
-    manifest {
-        attributes 'Main-Class': 'org.vitrivr.cineast.standalone.Main'
-        attributes 'Multi-Release': 'true'
-		attributes 'Implementation-Version': '1.xx'
-    }
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
     with jar
+}
+
+jar{
+    manifest {
+        attributes 'Main-Class': 'org.vitrivr.cineast.api.Main'
+        attributes 'Multi-Release': 'true'
+        attributes 'Implementation-Version': '1.xx'
+    }
+}
+
+shadowJar {
+    mergeServiceFiles()
 }
 
 /**
