--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,18 +32,9 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
-      # ADAMpro Protobuf are legacy at this point so they will never change
-    - name: Cache ADAMpro Protobuf
-      id: cache-protobuf
-      uses: actions/cache@v2
-      with:
-        path: cineast-core/build/generated/main
-        key: ${{ runner.os }}-adampro
-    - name: Generate Proto
-      run: ./gradlew cineast-core:generateProto
     - name: Test with Gradle
       run: ./gradlew test
     - name: runtime-jar
-      run: ./gradlew cineast-runtime:fatJar
+      run: ./gradlew cineast-runtime:shadowJar
     - name: api-jar
-      run: ./gradlew cineast-api:fatJar
+      run: ./gradlew cineast-api:shadowJar
