changes to defaults, more cherry-picking from ci-why-vitrivr branch

--- a/cineast.json
+++ b/cineast.json
@@ -126,8 +126,8 @@
     "httpsPort": 4568,
     "legacyPort": 12345,
     "threadPoolSize": 12,
-    "serveContent": true,
-    "serveUI": true,
+    "serveContent": false,
+    "serveUI": false,
     "uiLocation": "../vitrivr-ng/dist",
     "thumbnailLocation": "thumbnails",
     "objectLocation": "objects",
