--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -17,17 +17,9 @@ distributions {
     }
 }
 
-task fatJar(type: Jar) {
-    archiveClassifier = 'full'
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
-}
-
 jar{
     manifest {
-        attributes 'Main-Class': 'org.vitrivr.cineast.api.Main'
+        attributes 'Main-Class': 'org.vitrivr.cineast.standalone.Main'
         attributes 'Multi-Release': 'true'
         attributes 'Implementation-Version': '1.xx'
     }
