--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ subprojects {
     repositories {
         jcenter()
         mavenCentral()
-
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
 
     /* Important warnings that are currently missing simply because there are too many: "cast", "rawtypes". Ideally, "all" should be used in the future. */
@@ -69,12 +71,6 @@ subprojects {
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
         testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
         testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
-
-        /** Protobuf & gRPC. */
-        compile group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
-        compile group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
-        compile group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
-        compile group: "io.grpc", name: "grpc-stub", version: "${grpcVersion}"
     }
 }
 
