--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compile('io.javalin:javalin-bundle:3.+'){
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.+'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.12.0'
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.+'
     compile 'org.vitrivr:cineast-proto:0.1.0'
 }
