--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
     # Setup Cottontail DB service container
     services:
       cottontail:
-        image: docker.pkg.github.com/vitrivr/cottontaildb/cottontaildb:0.12.1
+        image: vitrivr/cottontaildb:0.12.5
         credentials:
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
