--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '6.1.0'
-    id 'java'
-    id 'idea'
     id 'de.undercouch.download' version "4.1.1"
     id 'com.google.osdetector' version '1.6.2'
+    id 'java'
+    id 'idea'
 }
 
 allprojects {
     /* Group name of our artifacts */
     group = 'org.vitrivr'
+
     /* Our current version */
     version = '3.0.3'
 
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
 }
 
 project.ext.protobufVersion = "3.14.0"
@@ -59,18 +62,18 @@ subprojects {
 
     dependencies {
         /** Log4j 2 */
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: version_log4j2
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: version_log4j2
+        compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: version_log4j2
 
         /** Jackson (JSON conversion) */
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: version_jackson
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: version_jackson
 
         /** Test dependencies (JUnit 5) */
-        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
-        testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
-        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: version_junit
+        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: version_junit
+        testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: version_junit_platform
     }
 }
 
