--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ allprojects {
     group = 'org.vitrivr'
 
     /* Our current version */
-    version = '3.0.3'
+    version = '3.0.3-SNAPSHOT'
 
     apply plugin: 'java'
     apply plugin: 'maven-publish'
