--- a/.github/workflows/release-maven.yml
+++ b/.github/workflows/release-maven.yml
@@ -1,8 +1,10 @@
-name: Publish Cineast artifacts to the OSS Snapshot Repository
+name: Publish Cineast artifacts to the Maven Central Repository
 on:
   push:
     branches:
       - main
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   publish:
@@ -16,12 +18,16 @@ jobs:
         with:
           java-version: 11.0.6
           server-id: maven
+      - id: get_version
+        name: Extract publication version from tag.
+        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - id: publish-gradle
-        name: Publish package to the OSS Snapshot Repository & GitHub Packages
+        name: Publish package the Maven Central Repository
         run: gradle publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          MAVEN_PUBLICATION_VERSION: ${{ env.VERSION }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
