--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Test with Gradle
-      run: ./gradlew test -i
+      run: ./gradlew test -d
     - name: runtime-jar
       run: ./gradlew cineast-runtime:shadowJar
     - name: api-jar
