Added "-it" flags to CI Cottontail DB Docker container to prevent container from exiting directly after launch. #195

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,7 @@ jobs:
         image: vitrivr/cottontaildb:0.12.5
         ports:
           - 1865:1865
+        options: -it
 
     # Start actual job.
     steps:
