also cleaning gradle cache before runs. This might be needed because there is some stuff in the cache from previous configurations

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,12 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Cleanup Gradle Cache
+      # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+      # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+      run: |
+        rm -f ~/.gradle/caches/modules-2/modules-2.lock
+        rm -f ~/.gradle/caches/modules-2/gc.properties
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       # https://github.com/actions/cache/blob/main/examples.md#java---gradle
