also building core jar separately to make sure runtimes are a more accuracte reflection of build times

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,6 +48,9 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
+    - name: core-jar
+      run: ./gradlew cineast-core:shadowJar
+    - name: api-jar
     - name: runtime-jar
       run: ./gradlew cineast-runtime:shadowJar
     - name: api-jar
