--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,7 +56,7 @@ jobs:
       run: ./gradlew cineast-api:shadowJar
     - name: Test with Gradle
       timeout-minutes: 5
-      run: ./gradlew test --scan
+      run: ./gradlew test --debug
     - name: Cleanup Gradle Cache
       # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
       # Restoring these files from a GitHub Actions cache might cause problems for future builds.
