--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ idea {
 
         excludeDirs += file('data')
         excludeDirs += file('thumbnails')
+        excludeDirs += file('output')
     }
 }
 
