adding logs-dir to excluded dirs

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ idea {
         excludeDirs += file('data')
         excludeDirs += file('thumbnails')
         excludeDirs += file('output')
+        excludeDirs += file('logs')
     }
 }
 
