--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,11 @@ version_commonscodec=1.15
 version_commonsio=2.8.0
 version_commonslang3=3.12.0
 version_commonsmath3=3.6.1
-version_cottontaildb=0.12.0
+version_cottontaildb=0.12.1
 version_ffmpeg=4.1-1.4.4
 version_gson=2.8.6
 version_guava=30.1.1-jre
+version_kotlin_stdlib=1.4.32
 version_log4j2=2.14.1
 version_jackson=2.12.2
 version_javalin=3.13.4
