--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
     # Setup Cottontail DB service container
     services:
       cottontail:
-        image: vitrivr/cottontaildb:0.12.5
+        image: vitrivr/cottontaildb:0.12.8
         ports:
           - 1865:1865
         options: -it
@@ -25,6 +25,8 @@ jobs:
     # Start actual job.
     steps:
     - uses: actions/checkout@v2
+    - name: nc connection test
+      run: nc -zv 127.0.0.1 1865
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -54,6 +56,8 @@ jobs:
       run: ./gradlew cineast-runtime:shadowJar
     - name: api-jar
       run: ./gradlew cineast-api:shadowJar
+    - name: nc connection test
+      run: nc -zv 127.0.0.1 1865
     - name: Test with Gradle
       timeout-minutes: 5
       run: ./gradlew test --debug
