--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -98,62 +98,62 @@ signing {
 dependencies {
 
     /** THE Cottontail DB proto dependency */
-    implementation group: 'org.vitrivr', name: 'cottontaildb-proto', version: version_cottontaildb
-    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin_stdlib
+    api group: 'org.vitrivr', name: 'cottontaildb-proto', version: version_cottontaildb
+    api group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin_stdlib
 
     /** THE ADAMpro proto dependency (legacy) */
-    implementation group: 'org.vitrivr', name: 'adampro-proto', version: version_adampro
+    api group: 'org.vitrivr', name: 'adampro-proto', version: version_adampro
 
     /* Google Json: GSON, since JSON db layer is based on this */
-    implementation group: 'com.google.code.gson', name: 'gson', version: version_gson
+    api group: 'com.google.code.gson', name: 'gson', version: version_gson
 
     /** Some basic stuff (collections etc). */
-    implementation group: "net.sf.trove4j", name: "trove4j", version: version_trove4j
-    implementation group: "com.google.guava", name: "guava", version: version_guava
-    implementation group: "com.googlecode.javaewah", name: "JavaEWAH", version: version_javaewah
+    api group: "net.sf.trove4j", name: "trove4j", version: version_trove4j
+    api group: "com.google.guava", name: "guava", version: version_guava
+    api group: "com.googlecode.javaewah", name: "JavaEWAH", version: version_javaewah
 
     /** Tensorflow (Java). */
-    implementation group: "org.tensorflow", name: "tensorflow-core-platform", version: version_tensorflow
+    api group: "org.tensorflow", name: "tensorflow-core-platform", version: version_tensorflow
 
     /** Apache Commons Libraries */
-    implementation group: "org.apache.commons", name: "commons-lang3", version: version_commonslang3
-    implementation group: "org.apache.commons", name: "commons-math3", version: version_commonsmath3
-    implementation group: "commons-io", name: "commons-io", version: version_commonsio
-    implementation group: "commons-codec", name: "commons-codec", version: version_commonscodec
+    api group: "org.apache.commons", name: "commons-lang3", version: version_commonslang3
+    api group: "org.apache.commons", name: "commons-math3", version: version_commonsmath3
+    api group: "commons-io", name: "commons-io", version: version_commonsio
+    api group: "commons-codec", name: "commons-codec", version: version_commonscodec
 
     /** ImageIO and computer graphics libraries. */
-    implementation group: "com.twelvemonkeys.imageio", name: "imageio-jpeg", version: version_twelvemonkeys
-    implementation group: "com.twelvemonkeys.imageio", name: "imageio-tiff", version: version_twelvemonkeys
-    implementation group: "com.drewnoakes", name: "metadata-extractor", version: version_metadataextractor
-    implementation group: "org.boofcv", name: "boofcv-all", version: version_boofcv
-    implementation group: "net.coobird", name: "thumbnailator", version: version_thumbnailator
+    api group: "com.twelvemonkeys.imageio", name: "imageio-jpeg", version: version_twelvemonkeys
+    api group: "com.twelvemonkeys.imageio", name: "imageio-tiff", version: version_twelvemonkeys
+    api group: "com.drewnoakes", name: "metadata-extractor", version: version_metadataextractor
+    api group: "org.boofcv", name: "boofcv-all", version: version_boofcv
+    api group: "net.coobird", name: "thumbnailator", version: version_thumbnailator
 
     /** JOGL and JOML dependencies for 3D model support. */
-    implementation "org.joml:joml:${version_joml}"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-windows-amd64"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-windows-i586"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-amd64"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-armv6"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-armv6hf"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-i586"
-    implementation "org.jogamp.jogl:jogl-all:${version_jogl}:natives-macosx-universal"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-windows-amd64"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-windows-i586"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-amd64"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-armv6"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-armv6hf"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-i586"
-    implementation "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-macosx-universal"
+    api "org.joml:joml:${version_joml}"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-windows-amd64"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-windows-i586"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-amd64"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-armv6"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-armv6hf"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-linux-i586"
+    api "org.jogamp.jogl:jogl-all:${version_jogl}:natives-macosx-universal"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-windows-amd64"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-windows-i586"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-amd64"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-armv6"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-armv6hf"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-linux-i586"
+    api "org.jogamp.gluegen:gluegen-rt:${version_jogl}:natives-macosx-universal"
 
     /** JavaCPP. */
-    implementation group: "org.bytedeco", name: "javacpp", version: version_javacpp
-    implementation group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: version_ffmpeg
+    api group: "org.bytedeco", name: "javacpp", version: version_javacpp
+    api group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: version_ffmpeg
 
     /** Java 9+ compatibility. */
-    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+    api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    api group: 'javax.activation', name: 'activation', version: '1.1.1'
 }
 
 shadowJar{
