--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -34,23 +34,25 @@ shadowJar {
  */
 dependencies {
 
+    api project(':cineast-core')
+
     /** Jetty Servlet support. */
-    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: version_jetty
+    api group: 'org.eclipse.jetty', name: 'jetty-servlet', version: version_jetty
 
     /** Airline (CLI parsing) */
-    implementation group: 'com.github.rvesse', name: 'airline', version: version_airline
+    api group: 'com.github.rvesse', name: 'airline', version: version_airline
     
     /** JLine 3 */
-    implementation group: 'org.jline', name: 'jline', version: version_jline
+    api group: 'org.jline', name: 'jline', version: version_jline
 
     /** OpenCSV for simple, yet effective CSV parsing */
-    implementation group: 'com.opencsv', name: 'opencsv', version: version_opencsv
+    api group: 'com.opencsv', name: 'opencsv', version: version_opencsv
 
 
     /** Prometheus */
-    implementation group: 'io.prometheus', name: 'simpleclient', version: version_prometheus
-    implementation group: 'io.prometheus', name: 'simpleclient_hotspot', version: version_prometheus
-    implementation group: 'io.prometheus', name: 'simpleclient_httpserver', version: version_prometheus
-    implementation group: 'io.prometheus', name: 'simpleclient_pushgateway', version: version_prometheus
-    implementation group: 'io.prometheus', name: 'simpleclient_servlet', version: version_prometheus
+    api group: 'io.prometheus', name: 'simpleclient', version: version_prometheus
+    api group: 'io.prometheus', name: 'simpleclient_hotspot', version: version_prometheus
+    api group: 'io.prometheus', name: 'simpleclient_httpserver', version: version_prometheus
+    api group: 'io.prometheus', name: 'simpleclient_pushgateway', version: version_prometheus
+    api group: 'io.prometheus', name: 'simpleclient_servlet', version: version_prometheus
 }
