Autodetection of highest supported Image API Version

--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -120,7 +120,7 @@ dependencies {
     testAnnotationProcessor "org.projectlombok:lombok:${lombok_version}"
 
     /** Mockito for unit testing */
-    implementation 'org.mockito:mockito-core:3.11.0'
+    implementation 'org.mockito:mockito-inline:3.11.0'
 
     /** Tensorflow (Java). */
     api group: "org.tensorflow", name: "tensorflow-core-platform", version: version_tensorflow
