Reformat code to Google style Assert that model has been initialized Undo unnecessary processSegment deletion and addition Add versions of new packages to gradle properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version_airline=2.8.1
 version_boofcv=0.27
 version_cineast_proto=0.1.0
 version_commonscodec=1.15
+version_commonstext=1.9
 version_commonsio=2.8.0
 version_commonslang3=3.12.0
 version_commonsmath3=3.6.1
@@ -18,6 +19,7 @@ version_javalin=3.13.4
 version_javaewah=1.1.7
 version_jbcrypt=0.4.3
 version_javacpp=1.5.5
+version_opencv=4.5.1-2
 version_jetty=9.4.38.v20210224
 version_jline=3.19.0
 version_joml=1.9.25
