--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -118,7 +118,7 @@ dependencies {
     /** Apache Commons Libraries */
     api group: "org.apache.commons", name: "commons-lang3", version: version_commonslang3
     api group: "org.apache.commons", name: "commons-math3", version: version_commonsmath3
-    api group: "org.apache.commons", name: "commons-text", version: "1.9"
+    api group: "org.apache.commons", name: "commons-text", version: version_commonstext
     api group: "commons-io", name: "commons-io", version: version_commonsio
     api group: "commons-codec", name: "commons-codec", version: version_commonscodec
 
@@ -153,10 +153,7 @@ dependencies {
     api group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: version_ffmpeg
     
     /** OpenCV. */
-    api group: 'org.openpnp', name: 'opencv', version: '4.5.1-2'
-
-    /** JTS */
-    api group: 'org.locationtech.jts', name: 'jts-core', version: '1.18.1'
+    api group: 'org.openpnp', name: 'opencv', version: version_opencv
 
     /** Java 9+ compatibility. */
     api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
