--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ version_commonstext=1.9
 version_commonsio=2.8.0
 version_commonslang3=3.12.0
 version_commonsmath3=3.6.1
-version_cottontaildb=0.12.2
+version_cottontail_proto=0.12.3
 version_ffmpeg=4.1-1.4.4
 version_gson=2.8.6
 version_guava=30.1.1-jre
