added possibility to specify in config file if JSON file concerning color features should be created or not

--- a/cineast.json
+++ b/cineast.json
@@ -137,6 +137,10 @@
   "monitoring":{
     "enablePrometheus": false,
     "prometheusPort": 4569
+  },
+
+  "jsonQuery": {
+    "createFile": false
   }
 
 }
