--- a/cineast.json
+++ b/cineast.json
@@ -19,22 +19,52 @@
         {"feature": "ConceptMasksAde20k", "weight" : 1.0}
       ],
       "globalcolor": [
-        {"feature": "AverageColor",  "weight": 2.3},
-        {"feature": "MedianColor", "weight": 1.2},
-        {"feature": "AverageFuzzyHist", "weight": 0.7},
-        {"feature": "HueHistogram", "weight": 0.7},
-        {"feature": "MedianFuzzyHist",   "weight": 1.3 }
+        {
+          "feature": "AverageColor",
+          "weight": 2.3
+        },
+        {
+          "feature": "MedianColor",
+          "weight": 1.2
+        },
+        {
+          "feature": "MedianFuzzyHist",
+          "weight": 1.2
+        },
+        {
+          "feature": "AverageFuzzyHist",
+          "weight": 0.7
+        },
+        {
+          "feature": "AverageFuzzyHistNormalized",
+          "weight": 0.7
+        },
+        {
+          "feature": "HueHistogram",
+          "weight": 0.7
+        }
       ],
       "localcolor": [
-        {"feature": "AverageColorARP44", "weight": 0.5},
-        {"feature": "AverageColorARP44Normalized", "weight": 0.5},
-        {"feature": "SubDivMedianFuzzyColor", "weight": 0.85},
-        {"feature": "AverageColorGrid8", "weight": 1.8},
-        {"feature": "AverageColorGrid8Normalized", "weight": 1.8},
-        {"feature": "CLD", "weight": 1.3},
-        {"feature": "CLDNormalized", "weight": 1.3},
-        {"feature": "MedianColorGrid8", "weight": 1.7},
-        {"feature": "AverageColorRaster", "weight": 1.0}
+        {
+          "feature": "AverageColorGrid8",
+          "weight": 1.8
+        },
+        {
+          "feature": "AverageColorGrid8Reduced15",
+          "weight": 1.8
+        },
+        {
+          "feature": "AverageColorRaster",
+          "weight": 1.8
+        },
+        {
+          "feature": "CLD",
+          "weight": 1.3
+        },
+        {
+          "feature": "CLDReduced15",
+          "weight": 1.3
+        }
       ],
       "edge": [
         {"feature": "EHD", "weight": 0.7},
@@ -140,7 +170,7 @@
   },
 
   "jsonQuery": {
-    "createFile": false
+    "createFile": true
   }
 
 }
