script to run for several sketches automated queries

--- a/color-feature-evaluation/build.gradle
+++ b/color-feature-evaluation/build.gradle
@@ -39,6 +39,11 @@ task(runRobot, dependsOn: 'classes', type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task(runQueries, dependsOn: 'classes', type: JavaExec) {
+    main = 'automatedQueries.AutomatedQueriesOfSketches'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 shadowJar {
     mergeServiceFiles()
 }
