calculate deltaE of colors (in HEX-format) saved in json file

--- a/color-feature-evaluation/build.gradle
+++ b/color-feature-evaluation/build.gradle
@@ -9,6 +9,7 @@ application {
 }
 
 dependencies {
+    compile project(':cineast-core')
     //testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java',
